[gd_scene load_steps=5 format=3 uid="uid://d30kqbrnpcokm"]

[ext_resource type="Script" path="res://world controller/world_controller.gd" id="1_3cqad"]
[ext_resource type="PackedScene" uid="uid://dvyxvkwwp6jb0" path="res://overworld scnee/overworld.tscn" id="1_nbtld"]
[ext_resource type="PackedScene" uid="uid://c1ymug51gg1wk" path="res://combat/combat.tscn" id="2_1b30c"]
[ext_resource type="Theme" uid="uid://dtwht8jmrvwlb" path="res://assets/game_theme.tres" id="3_i7hs6"]

[node name="world_controller" type="Node"]
process_mode = 3
script = ExtResource("1_3cqad")

[node name="overworld" parent="." instance=ExtResource("1_nbtld")]
process_mode = 1
metadata/_edit_lock_ = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
process_mode = 2

[node name="overworld_menu" type="Control" parent="CanvasLayer2"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_i7hs6")
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer2/overworld_menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.646
anchor_top = 0.111
anchor_right = 0.924
anchor_bottom = 0.947
offset_left = -0.0640106
offset_top = 0.0239983
offset_right = 0.18399
offset_bottom = -0.552002

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2/overworld_menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/overworld_menu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer2/overworld_menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TEST"

[node name="Button2" type="Button" parent="CanvasLayer2/overworld_menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TEST"

[node name="Button3" type="Button" parent="CanvasLayer2/overworld_menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TEST"

[node name="Button4" type="Button" parent="CanvasLayer2/overworld_menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TEST"

[node name="Button5" type="Button" parent="CanvasLayer2/overworld_menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TEST"

[node name="player_info" type="Control" parent="CanvasLayer2/overworld_menu"]
layout_mode = 1
anchor_left = 0.0208333
anchor_top = 0.037037
anchor_right = 0.249849
anchor_bottom = 0.295778
offset_right = 0.0579987
offset_bottom = 0.111996
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer2/overworld_menu/player_info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2/overworld_menu/player_info/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/overworld_menu/player_info/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer2/overworld_menu/player_info/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "NAME : "

[node name="Label2" type="Label" parent="CanvasLayer2/overworld_menu/player_info/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MONEY"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="combat" parent="CanvasLayer" instance=ExtResource("2_1b30c")]
unique_name_in_owner = true
visible = false
metadata/_edit_lock_ = true

[node name="end_of_combat_screen" type="CanvasLayer" parent="."]

[node name="end_of_combat_rewards" type="Control" parent="end_of_combat_screen"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="window_container" type="Control" parent="end_of_combat_screen/end_of_combat_rewards"]
layout_mode = 1
anchor_left = 0.3
anchor_top = 0.158333
anchor_right = 0.698438
anchor_bottom = 0.844444
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="end_of_combat_screen/end_of_combat_rewards/window_container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="screen_title" type="Control" parent="end_of_combat_screen/end_of_combat_rewards/window_container"]
layout_mode = 1
anchor_left = 0.031
anchor_top = 0.016
anchor_right = 0.973
anchor_bottom = 0.19
offset_left = 0.0949998
offset_top = 0.0479999
offset_right = -0.115005
offset_bottom = 0.0699959

[node name="Label" type="Label" parent="end_of_combat_screen/end_of_combat_rewards/window_container/screen_title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -11.5
offset_right = 16.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "WIN"
